[package]
name = "stereophonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
iced = { version = "0.8.0", default-features = false, features = ["glow"] }
spidev = "0.5.1"
tracing = "0.1.37"
